<resources>

    <!-- Menu names and App -->
    <string name="app_name">Elyst</string>
    <string name="menu_app_name">elyst</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="watchlist">Watchlist</string>
    <string name="attend">Attend</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about_us">We are students at Dartmouth College interested in making the process of finding nearby events easier</string>
    <string name="about">About Us</string>
    <string name="event_details">Event Details</string>
    <string name="title_activity_find_events">FindEventsActivity</string>
    <string name="search_hint">Search Events</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_event">Title</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="attending">Est. attendance</string>
    <string name="description">Description</string>
    <string name="save">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_account_preferences">AccountPreferencesActivity</string>
    <string name="name">Name:</string>
    <string name="name_field">Your Name</string>
    <string name="email">Email</string>
    <string name="email_field">Your Email</string>
    <string name="phone">Phone</string>
    <string name="phone_field">Your Phone</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save_message">Saved</string>
    <string name="prefs_file">MyRunsLab1</string>
    <string name="pref_name">save_name</string>
    <string name="pref_email">save_email</string>
    <string name="pref_phone">save_phone</string>
    <string name="pref_gender">save_gender</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="account_pref">Account Preferences</string>
    <string name="profile_description">Name, Email, etc</string>
    <string name="profile_summary">User Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="privacy">Privacy Setting</string>
    <string name="privacy_summary">Posting your events anonymously</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="unit_pref">Social</string>
    <string name="unit_summary">Select which social media you want to link account with</string>
    <string name="comments">Comments</string>
    <string name="comm_summary">Please enter your comments</string>
    <string name="misc">Misc</string>
    <string name="webpage">Webpage</string>
    <string name="url">http://elystapp.weebly.com/</string>
    <string name="create">Create Event</string>
    <string name="settings">Settings</string>

    <!-- Menu Items -->
    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_settings">Settings</string>
    <string name="ui_menu_log_out">Log Out</string>
    <string name="event_image">Image</string>
    <string name="pic_description">image of the event</string>
    <string name="change_pic">Upload image</string>


    <!-- Google Maps -->
    <string name="google_maps_key">AIzaSyBACYwL3ocNA7chpJ3rmuSOzMNEtziuobg</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="SignupBtn">Sign Up</string>

    <!--Facebook Log In -->
    <string name="facebook_app_id">1762193714016971</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="date">Date</string>
    <string name="ok">OK</string>
    <string name="event_cost">Cost</string>
    <string name="guests">Guests</string>

    <string name="event_photo_file_name">event_photo.png</string>
    <string name="datetime">Date and Time</string>
    <string name="category">Category:</string>
    <string name="unattend">Unattend</string>


</resources>
