<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.elystapp.elyst.CreateEventActivity"
    tools:showIn="@layout/activity_create_event">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_event"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entered_title"
            android:inputType="text"/>
        <TextView
            android:id="@+id/location_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entered_location"
            android:inputType="text"/>
        <TextView
            android:id="@+id/time_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entered_time"
            android:inputType="datetime"/>
        <TextView
            android:id="@+id/attending_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attending"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entered_attending"
            android:inputType="number"/>
        <TextView
            android:id="@+id/description_event"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entered_description"
            android:inputType="text"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/save_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1.0" />
            <Button
                android:id="@+id/cancel_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

